--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.4.2
 homepage: https://github.com/rhymelph/r_upgrade
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.17.0 <=5.0.0"
   flutter: ">=1.12.0"
 
 dependencies:
